fix: expose competition routes to admin
